--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -23,6 +23,8 @@
         <input class="btn" type="submit" value="Login">
     </div>
 
+    <a href="{% url 'register' %}"><h3 style="color:#ffffff;" align="center">Need An Account? Sign Up Now</h3></a>
+
 </form>
 </body>
 </html>
