--- a/crypto/static/css/loginstyle.css
+++ b/crypto/static/css/loginstyle.css
@@ -13,7 +13,7 @@
 
 body {
     font-family: 'Lato', sans-serif;
-    color: #4A4A4A;
+    color: #ffffff;
     display: flex;
     justify-content: center;
     align-items: center;
