--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -99,7 +99,7 @@
 
             <container class="container">
                 <cards class="cards">
-                    <bitcoin style="width: 30%" class="btc">
+                    <bitcoin style="width: 50%" class="btc">
                         <card class="asset-info">
                             <div class="title">
                                 <img src="https://s3.us-east-2.amazonaws.com/nomics-api/static/images/currencies/btc.svg"
@@ -147,16 +147,16 @@
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
                     integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
                     crossorigin="anonymous"></script>
-            <script>
-                $(document).ready(function () {
-                    $("#myInput").on("keyup", function () {
-                        var value = $(this).val().toLowerCase();
-                        $("#myTable tr").filter(function () {
-                            $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
-                        });
-                    });
-                });
-            </script>
+{#            <script>#}
+{#                $(document).ready(function () {#}
+{#                    $("#myInput").on("keyup", function () {#}
+{#                        var value = $(this).val().toLowerCase();#}
+{#                        $("#myTable tr").filter(function () {#}
+{#                            $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)#}
+{#                        });#}
+{#                    });#}
+{#                });#}
+{#            </script>#}
             <script>
                 const btcData = async () => {
                     const response = await fetch('https://min-api.cryptocompare.com/data/v2/histominute?fsym=BTC&tsym=CAD&limit=119&api_key=0646cc7b8a4d4b54926c74e0b20253b57fd4ee406df79b3d57d5439874960146');
